samples/yaml/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: my-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "hender.tech"
  - port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      credentialName: letsencrypt-production-hendertech-tls
      mode: SIMPLE
    hosts:
    - "hender.tech"
